src/test/deca/syntax/parser/invalid/decl_var_multiple_assign_word.deca
// Test de parser, la valeur assignée du deuxieme ident est
// invalide, ici un mot réservé POINT

{
    int x, y = 8, .;
}